<?xml version="1.0"?>
<package format="3">
  <name>mxck_interfaces</name>
  <version>0.0.1</version>
  <description>Custom services and interfaces for MXCK</description>
  <maintainer email="william.engel@mdynamix.de">root</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>